--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "سورس الجوكر",
+  "name": "سورس سيمو",
   "description": "اللهم صلِ على محمد وآل محمد",
   "logo": "https://telegra.ph/file/83ee584aef1c4db1d9597.jpg",
   "keywords": [
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/jepthoniq/lMl10l/",
+  "repository": "https://github.com/sourcesemsem/MO/",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
